[package]
name = "rassert"
version = "1.2.0"
edition = "2018"
description = "Fluent, easy-to-extend test assertion library."
authors = ["Attila Bagossy <bagossyattila@outlook.com>"]
categories = ["development-tools::testing"]
keywords = ["assert", "assertion", "testing", "test", "tests"]

license = "MIT"

homepage = "https://github.com/battila7/rassert"
repository = "https://github.com/battila7/rassert"
readme = "README.md"

[dependencies]
